# athelia

./: .gitignore  Athelia.cbp  README.md  SConstruct  index.html  license  params.json
src/: SConscript
src/backend/: block.h  controller.h  cube.cpp  cube.h  debug.cpp  debug.h  gamesystem.cpp  gamesystem.h  graphics.cpp  graphics.h  input.cpp  input.h  patch.h
src/lua/: function.h  luaState.cpp  luaState.h  type.h  wrapper.cpp
techdemos/: SConscript
techdemos/block/: main.cpp  spinningCube.cpp  spinningCube.h
techdemos/run_file/: main.cpp
techdemos/template/: main.cpp
trunk/: CMakeLists.txt  license  plugins.cfg
trunk/src/: SConscript  camera.cpp  camera.h  cube.cpp  cube.h  light.cpp  light.h  main.cpp  plane.h  ray.cpp  ray.h  vector.cpp  vector.h  window.cpp  window.h
trunk/src/backend/: block.cpp  block.h  cube.cpp
trunk/src/lua/: CMakeLists.txt  lua.cpp  lua.h
trunk/src/renderer/: CMakeLists.txt  camera.cpp  camera.h  colour.cpp  colour.h  cube.cpp  cube.h  plane.cpp  plane.h  ray.cpp  ray.h  renderable.h  trace.cpp  trace.h  triangle.cpp  triangle.h  vector.cpp
trunk/techdemos/: utils.hpp
trunk/techdemos/block/: cube.cpp  cube.h  main.cpp
trunk/techdemos/cube/: CMakeLists.txt  cube.cpp
trunk/techdemos/light/: CMakeLists.txt  light.cpp
trunk/techdemos/lua/run_file/: CMakeLists.txt  main.cpp
trunk/techdemos/mirror/: CMakeLists.txt  mirror.cpp
trunk/techdemos/rendering/: utils.hpp
trunk/techdemos/rendering/cube/: cube.cpp
trunk/techdemos/rendering/mirror/: mirror.cpp
trunk/techdemos/rendering/triangle/: CMakeLists.txt
trunk/techdemos/triangle/: triangle.cpp
